# fastapi-temporal-rnd

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  worker.py
src/: activities.py  api_client.py  workflows.py
