[tool.poetry]
name = "python-temporal-workflow"
version = "0.1.0"
description = "FastAPI application with temporal workflow RnD"
authors = ["Ashraful <ashraful.islam@bkash.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
pydantic = "^2.9.1"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
